--- a/2015/20150002.md
+++ b/2015/20150002.md
@@ -1,4 +1,3 @@
-# 2015-任意门
+# 2015-yooooo
 
-![](https://bilicoverimg.github.io/2015/2015-任意门.jpg)
-
+![](https://bilicoverimg.github.io/2015/2015-yooooo.jpg)
