--- a/2017/20171224.md
+++ b/2017/20171224.md
@@ -1,3 +1,4 @@
 # [2017.12.24-一月新番](http://www.bilibili.com/blackboard/activity-S1SIx4czG.html)
+# 2017.12.27-一月新番
 ![](https://bilicoverimg.github.io/2017/2017.12.24-一月新番.jpg)
 ![](https://bilicover2017.github.io/2017.12.24.jpg)
