--- a/2015/20150622.md
+++ b/2015/20150622.md
@@ -1,2 +1,2 @@
- # 2015.06.22-使徒来袭](https://www.bilibili.com/topic/725.html)
+ # [2015.06.22-使徒来袭](https://www.bilibili.com/topic/725.html)
 ![](https://bilicoverimg.github.io/2015/2015.06.22-使徒来袭.jpg)
