--- a/2017/20171028.md
+++ b/2017/20171028.md
@@ -1,2 +1,3 @@
-# [2017.10.28-春宵苦短，少女前进吧](http://bangumi.bilibili.com/anime/6518)
-![](https://bilicoverimg.github.io/2017/2017.10.28-春宵苦短，少女前进吧.jpg)
+# 2017.10.28-LANCÔAM
+![](https://bilicoverimg.github.io/2017/2017.10.28-LANCÔAM.jpg)
+![](https://bilicover2017.github.io/2017.10.28.jpg)
